fixed h1 content being cut off by mobile menu

--- a/wp-content/themes/digital-pro/custom-styles.scss
+++ b/wp-content/themes/digital-pro/custom-styles.scss
@@ -573,7 +573,7 @@ h2:before {
 @media only screen and (max-width: 800px) {
 	.site-container {
 	  .site-inner {
-		margin-top: 85px;
+		margin-top: 120px;
 	  }
 	}
 }
